# jwm.robotstxt

./: .buildinfo  .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: documentation.yaml  release.yaml  sphinx.yaml
_autosummary/: jwm.robotstxt.googlebot.ParseRobotsTxt.html  jwm.robotstxt.googlebot.RobotsMatcher.html  jwm.robotstxt.googlebot.RobotsParseHandler.html  jwm.robotstxt.googlebot.html  jwm.robotstxt.html  pyrobotstxt.googlebot.ParseRobotsTxt.html  pyrobotstxt.googlebot.RobotsMatcher.html  pyrobotstxt.googlebot.RobotsParseHandler.html  pyrobotstxt.googlebot.VectorString.html  pyrobotstxt.googlebot.html  pyrobotstxt.html
_sources/: api.rst.txt  index.rst.txt
_sources/_autosummary/: jwm.robotstxt.googlebot.ParseRobotsTxt.rst.txt  jwm.robotstxt.googlebot.RobotsMatcher.rst.txt  jwm.robotstxt.googlebot.RobotsParseHandler.rst.txt  jwm.robotstxt.googlebot.rst.txt  jwm.robotstxt.rst.txt  pyrobotstxt.googlebot.ParseRobotsTxt.rst.txt  pyrobotstxt.googlebot.RobotsMatcher.rst.txt  pyrobotstxt.googlebot.RobotsParseHandler.rst.txt  pyrobotstxt.googlebot.VectorString.rst.txt  pyrobotstxt.googlebot.rst.txt  pyrobotstxt.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/jwm/robotstxt/: googlebot.cc
src/pyrobotstxt/: googlebot.cc  googlebot.pyi
tests/jwm/robotstxt/: test_googlebot.py
tests/test_pyrobotstxt/: test_googlebot.py
