[build-system]
requires = ["setuptools", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobotstxt"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
doc = [
    "sphinx",
    "furo"
]

test = [
    "pytest"
]

dev = [
    "pyrobotstxt[doc, test]",
    "isort",
    "black",
    "clang-format",
    "setuptools",
    "cmake",
    "pybind11"
]

[tool.pytest.ini_options]
minversion = 6.0
console_output_style = "count"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]