[build-system]
requires = ["setuptools", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobotstxt"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
doc = [
    "sphinx",
    "furo"
]

test = [
    "coverage",
    "pytest"
]

format = [
    "isort",
    "black",
    "clang-format"
]

dev = [
    "pyrobotstxt[doc, test, format]",
    "cibuildwheel",
    "setuptools",
    "cmake",
    "pybind11"
]

[tool.pytest.ini_options]
minversion = 6.0
console_output_style = "count"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-extras = ["test"]
test-command = "python -m coverage run -m pytest {package}/tests"