[build-system]
requires = ["setuptools", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "jwm.robotstxt"
version = "1.0.2"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
doc = [
    "sphinx",
    "furo"
]

test = [
    "coverage",
    "pytest"
]

format = [
    "isort",
    "black",
    "clang-format"
]

dev = [
    "jwm.robotstxt[doc, test, format]",
    "cibuildwheel",
    "setuptools",
    "cmake",
    "pybind11"
]

[tool.pytest.ini_options]
minversion = 6.0
console_output_style = "count"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-extras = ["test"]
test-command = "python -m coverage run -m pytest {package}/tests"
# Skip 32 bit platforms for now. Will need to find a way of building
# robotstxt on 32 bit platforms.
skip = ["cp310-win32", "cp311-win32", "cp312-win32", "cp313-win32"]